test/integration/bad/missing_dist_suffix/non_existing_distribution_suffix1.stan
data { 
}
model {  
    target += von_mises_cdf(1|0,1);
}
